--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "xterm": "^4.19.0"
+    "xterm": "^4.19.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
